---------------------------------------------------------------------------------------------------
Version: 0.69.99
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.98
Date: 2025-08-12
  Changes:
    - More long term fix to the issues from 0.69.95-97 on stack overflow. There are now more safeguards in place to stop this from ever happenning again.
---------------------------------------------------------------------------------------------------
Version: 0.69.97
Date: 2025-08-11
  Changes:
    - Added emergency failsafe to the stack overflow bug.
---------------------------------------------------------------------------------------------------
Version: 0.69.96
Date: 2025-08-11
  Changes:
    - Shattered planet mod support:
      ► Crapapult can now be placed on the shattered planet.
      ► New cross tech for shattered planet.
    - Added diagnostics to technology prerequisite search.
---------------------------------------------------------------------------------------------------
Version: 0.69.95
Date: 2025-08-10
  Changes:
    - More text added for multiplayer.
    - More lore.
    - Readme/info now shows which planet mods for which Rubia has cameo technologies.
---------------------------------------------------------------------------------------------------
Version: 0.69.94
Date: 2025-08-09
  Changes:
    - Tenebris is now explicitly locked behind Rubia by default. This is toggleable via mod settings (just like locking Aquilo behind it). Realistically, you will only notice if you have Tenebris + a mod that deletes Aquilo.
---------------------------------------------------------------------------------------------------
Version: 0.69.93
Date: 2025-08-08
  Changes:
    - Long stack insterter recipe is no longer locked to Rubia.
    - Rubia pressure 50 hbar => 80 hbar, gravity 2=>2.4 m/s^2. This improves robot energy usage: 4x => 3x.