@@ -2,6 +2,9 @@
 Version: 0.69.99
 Date: ????
   Changes:
+    - Crapapult speed nerf: void 245/s => 100/s. The net effect is: 1) Normal crapapult voids a nice round 100/s. 2) Voiding a stacked green belt now needs a legendary crapapult, as a normal crapapult will not be enough. Most users will not notice much difference.
+    - Crapapult energy change: 1000kW => 800 kW. It also has more idle power drain (17 => 200 kW). Crapapult should spike your power grid a bit less than before, but generally cost more electricity to place one at all.
+    - Crapapult now voids materials used for trigger techs just as fast as it voids anything else. This is a buff.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.98
 Date: 2025-08-12
